Add dependency injection + refacto + doc
